tests/paczka1/fuzzy1/32077643.err
Error in line 1: A588 A588 86,9
Error in line 3: bhox S556 3,5
Error in line 7: hSqBISKB S504 24,4
Error in line 6: vyE A588 50,0
Error in line 19: A588 A489 54,2
Error in line 15: vyE S504 46,2
Error in line 29: LKdr6 A489 2,2
Error in line 32: LKdr6 S504 17,0
